# PythonFletMultiplatformDevelop

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  android-flet-deployment-guide.md  api-backend-integration-guide.md  app-analytics-guide.md  architecture-design-guide.md  cicd-release-guide.md  cross-platform-code-management-guide.md  ios-flet-deployment-guide.md  multilingual-support-guide.md  privacy-terms-templates.md  project-guidelines.md  python-flet-multiplatform-guide.md  security-checklist.md  testing-qa-guide.md  ui-ux-design-guidelines.md  web-flet-deployment-guide.md
flet-multiplatform-app/: .coveragerc  .env  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-perf.txt  requirements-test.txt  requirements.txt  setup_test_env.bat  setup_test_env.sh
flet-multiplatform-app/.github/workflows/: ci.yml
flet-multiplatform-app/backend/: requirements.txt
flet-multiplatform-app/docs/: DEVELOPER_GUIDE.md  GETTING_STARTED_JA.md  api_reference.md  design_guidelines.md  development_roadmap.md  fullstack-implementation-guide.md  getting_started.md  performance-testing.md  test-coverage-badge.md  test-coverage-reporting.md  test_environment_setup.md  testing-environment.md  troubleshooting.md  tutorial.md  uv-package-management.md
flet-multiplatform-app/frontend/: requirements.txt
flet-multiplatform-app/scripts/: README.md  analyze_perf_results.py  analyze_performance.py  auto_test.py  check_performance.py  generate_coverage_report.py  generate_perf_test_data.py  generate_performance_report.py  generate_performance_test_data.py  generate_sample_metrics.py  generate_test_data.py  init_test_db.py  performance_alert.py  run_perf_tests.py  run_performance_tests.py  run_tests.py  send_slack_notification.py  setup_test_environment.py  setup_tests.py  test.bat  test.sh  test_environment.py
flet-multiplatform-app/scripts/templates/: performance_report.html
flet-multiplatform-app/src/: app.py  flet_app.py  main.py
flet-multiplatform-app/src/assets/: fonts
flet-multiplatform-app/src/backend/: __init__.py  alembic.ini  app.py  deps.py  main.py  requirements.txt  sql_app.db
flet-multiplatform-app/src/backend/alembic/: env.py  script.py.mako
flet-multiplatform-app/src/backend/api/: __init__.py  deps.py  routes.py
flet-multiplatform-app/src/backend/app/: __init__.py
flet-multiplatform-app/src/backend/config/: __init__.py  config.py  database.py  logging.py  test_config.py
flet-multiplatform-app/src/backend/core/: __init__.py  config.py  db.py  security.py
flet-multiplatform-app/src/backend/db/: init_db.py
flet-multiplatform-app/src/backend/models/: __init__.py  base.py  item.py  user.py
flet-multiplatform-app/src/backend/schemas/: __init__.py  base.py  item.py  token.py  user.py
flet-multiplatform-app/src/backend/tests/: __init__.py  conftest.py  test_app.py  test_auth.py  test_database.py  test_users.py
flet-multiplatform-app/src/backend/utils/: __init__.py  security.py
flet-multiplatform-app/src/components/: __init__.py
flet-multiplatform-app/src/components/common/: app_card.py  custom_buttons.py  (+1 more)
flet-multiplatform-app/src/config/: __init__.py  database.py  logging.py  settings.py  theme_config.py
flet-multiplatform-app/src/frontend/: app.py
flet-multiplatform-app/src/services/: api_service.py
flet-multiplatform-app/src/utils/: __init__.py  platform_utils.py  responsive_utils.py  security.py
flet-multiplatform-app/templates/: performance_report.html
flet-multiplatform-app/test_data/performance/: baseline_metrics.json  current_metrics.json
flet-multiplatform-app/tests/: conftest.py  test_components.py  test_health.py  test_responsive.py
flet-multiplatform-app/tests/api/: test_auth.py  test_users.py
flet-multiplatform-app/tests/performance/: README.md  analyze_results.py  base_test.py  benchmarks.py  config.py  requirements-test.txt  simple_test.py  test_api_endpoints.py  test_api_performance.py  test_endurance.py  test_load.py  test_scalability.py  test_stress.py  utils.py
(+129 files in other folders)
