[tool.poetry]
name = "flet-multiplatform-app"
version = "0.1.0"
description = "A multi-platform application using Python Flet."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flet = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"